k8s/dev/11-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bd-backend
  namespace: dev
spec:
  selector:
    app: bd-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
